--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
 
+
+
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
+    
+}
+
+.page-container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content-wrap{
+    flex: 1;
+}
