--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 
 
-@media screen and (min-width: 300px) and (max-width: 480px) {
+/* @media screen and (min-width: 300px) and (max-width: 480px) {
     
 }
 
@@ -14,4 +14,4 @@
 
 .content-wrap{
     flex: 1;
-}
+} */
