--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,7 +12,7 @@
 }
 
 .nav-link:hover {
-    color: #d4af37
+    color: #d4af37;
 }
 
 #navbarNav {
@@ -29,7 +29,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 319px) {
     .navbar {
         display: flex;
         flex-wrap: wrap;
