--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -36,6 +36,17 @@ form {
     border-bottom: solid 2px grey;
 }
 
+#bookImg {
+    position: relative;
+}
+
+.status {
+    position: absolute;
+    bottom: 0;
+    margin: 0px;
+    width: 100%;
+}
+
 @media screen and (max-width: 820px) {    
     form {
         border-bottom: solid 2px grey;
