--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,6 +9,7 @@
 
 .nav-link {
     color: white;
+    font-size: 20px;
 }
 
 .nav-link:hover {
@@ -17,6 +18,13 @@
 
 #navbarNav {
     justify-content: end;
+}
+
+@media screen and (max-width: 500px) {
+    .nav-link {
+        font-size: 18px;
+        padding: 8px;
+    }
 }
 
 @media screen and (max-width: 420px) {
