--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -1,5 +1,5 @@
 body {
-    min-width: 200px;
+    min-width: 230px;
 }
 
 .btn {
@@ -21,7 +21,7 @@ main {
 
 form {
     position: absolute;
-    top: 120px;
+    top: 150px;
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -52,6 +52,14 @@ form {
 
 .placeholder {
     color: red;
+}
+
+.books {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-items: center;
+
 }
 
 @media screen and (max-width: 820px) {    
@@ -115,3 +123,4 @@ form {
         margin-bottom: 0 !important;
     }
 }
+
