amended color of link on focus on navbar

--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -27,8 +27,7 @@ form {
     flex-direction: column;
 }
 
-.books,
-#banner {
+.books, #banner, h2 {
     margin-left: 20%;
     
 }
@@ -92,8 +91,7 @@ form {
         flex-direction: column;
     }
 
-    .books,
-    #banner {
+    .books, #banner, h2 {
         margin: 0px 0px;
     }
 }
