--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -1,124 +1,25 @@
-body {
-    min-width: 230px;
-}
-
-.btn {
-    background-color: #32522f;
-    color: white;
-    width: 50%;
-    font-size: 0.6rem;
-    padding: 0.2rem 0.2rem;
-}
-
-.btn:hover {
-    border: #32522f solid 0.2px;
-}
-
-main {
+#books {
     display: flex;
     flex-direction: column;
 }
 
-form {
-    position: absolute;
-    top: 150px;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
+#books>h1, #books>h2 {
+    margin-left: 20%;    
 }
 
-.books, #banner, h2 {
-    margin-left: 20%;
-    
-}
-
-#banner {
+#books>h1 {
     border-bottom: solid 2px grey;
 }
 
-#bookImg {
-    position: relative;
-    
-}
-
-.status {
-    position: absolute;
-    bottom: 0;
-    margin: 0px;
-    width: 100%;
-    
-}
-
-.placeholder {
-    color: red;
-}
-
-.books {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    justify-items: center;
-
-}
-
 @media screen and (max-width: 820px) {    
-    form {
-        border-bottom: solid 2px grey;
-        position: static;
-        width: 100%;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 10px;
-    }
-
-    .title,
-    .author {
-        flex: 1 0 40%;
-        min-width: 120px;
-    }
-
-    .location,
-    .condition,
-    .language,
-    .genre,
-    .search {
-        flex: 1 0 20%;
-        min-width: 120px;
-    }
-
-    main {
+    #books {
         display: flex;
         flex-direction: column;
     }
 
-    .books, #banner, h2 {
+    #books>h2, #books>h1 {
         margin: 0px 0px;
     }
 }
 
-@media screen and (max-width: 420px) {
-    p {
-        font-size: 12px;
-    }
-
-    h5 {
-        font-size: 16px;
-    }
-
-    form>* {
-        height: 30px;
-    }
-
-    .form-select, .form-control {
-        font-size: 12px;
-    }
-
-    .fs-6 {
-        font-size: 12px !important;
-    }
-
-    .mb-2 {
-        margin-bottom: 0 !important;
-    }
-}
 
