--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 html, body, #root {
-    height: 100%;
     width: 100%;
     margin: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 #root {
+    min-height: 100%;
     display:flex;
     flex-direction: column;
 }
@@ -15,4 +19,8 @@ main {
 
 body {
     min-width: 230px;
+}
+
+.btn {
+    --bs-btn-bg: #32522f;
 }
