--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,18 +1,6 @@
-#search-btn {
-    background-color: #32522f;
-    color: white;
-    width: 50%;
-    font-size: 0.6rem;
-    padding: 0.2rem 0.2rem;
-}
-
-#search-btn:hover {
-    border: #32522f solid 0.2px;
-}
-
 #search-form {
     position: absolute;
-    top: 150px;
+    /* top: 150px; */
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -36,8 +24,7 @@
     #select-location,
     #select-condition,
     #select-language,
-    #select-genre,
-    #search-btn {
+    #select-genre {
         flex: 1 0 20%;
         min-width: 120px;
     }
