--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,7 +1,12 @@
 #search-form {
     position: absolute;
-    /* top: 150px; */
+    top: 150px;
     width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.options {
     display: flex;
     flex-direction: column;
 }
@@ -13,10 +18,14 @@
         width: 100%;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 10px;
+        /* gap: 0.5rem; */
     }
 
-    #input-title, #input-author {
+    .options, #search-form {
+        gap:0.3rem;
+    }
+
+    #input-title, #input-author, .options {
         flex: 1 0 40%;
         min-width: 120px;
     }
@@ -27,23 +36,5 @@
     #select-genre {
         flex: 1 0 20%;
         min-width: 120px;
-    }
-}
-
-@media screen and (max-width: 420px) {
-    #search-form>* {
-        height: 30px;
-    }
-
-    #search-form>.form-select, #search-form>.form-control {
-        font-size: 12px;
-    }
-
-    #search-form>.fs-6 {
-        font-size: 12px !important;
-    }
-
-    #search-form>.mb-2 {
-        margin-bottom: 0 !important;
     }
 }
