--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,6 +1,6 @@
 #main {
     margin: auto;
-    width: 50rem;
+    width: 50%;
 }
 
 #dashboard-container {
@@ -16,16 +16,17 @@
     flex-wrap: wrap;
     flex-direction: row;
     margin: 1rem;
-    border: 2px solid green;
-    background-color: rgb(166, 222, 166);
+    border: 4px solid #32522f;
+    background-color: #c2dac1;
 }
 
 .appointment-card {
+    text-align: center;
     flex: 1;
     margin: 1rem;
     padding: 1rem;
-    border: 2px solid green;
-    background-color: rgb(232, 232, 232);
+    border: 4px solid #32522f;
+    background-color: white;
 }
 
 .button-container {
@@ -35,4 +36,23 @@
     align-items: center;
     width: 100%;
     padding: 0.5rem;
+}
+
+.dash-btn {
+    font-weight: bold;
+    background-color: #32522f;
+    color:white;
+    width:200px;
+}
+
+@media screen and (max-width: 820px) {
+    #appointment-container {
+        min-width: 50%;
+        flex-direction: column;
+    }
+
+    .button-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
