added padding to book image in the book display card

--- a/src/styles/Showbooks.css
+++ b/src/styles/Showbooks.css
@@ -5,7 +5,7 @@
 }
 
 #bookCardImg {
-    object-fit: cover;
+    object-fit: contain;
     height: 12rem;
     min-height: 100%;
     min-width: 100%;
