--- a/src/styles/Appointment.css
+++ b/src/styles/Appointment.css
@@ -4,12 +4,12 @@
     left: 0;
 }
 
-.form{
+/* .form{
     position: relative;
     top: 10vh;
     right: 0;
-}
-
+} */
+/* 
 .submit{
     position: relative;
     top: 50vh;
@@ -17,4 +17,4 @@
 
 .submit>p{
     font-weight: bold;
-}
+} */
