--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,46 +1,61 @@
 @keyframes flash {
-    from { color: blueviolet;
+    from {
+        color: blueviolet;
     }
-    to { color:aqua;
+
+    to {
+        color: aqua;
     }
 }
 
 @keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
 }
 
-.banner{
+.banner {
     border-bottom: solid 2px grey;
+    margin-top: 1rem;
     margin-left: 20%;
     animation: flash 2s infinite alternate;
     font-weight: bold;
 
 }
-.intro{
+
+.intro {
     margin-left: 20%;
     /* animation: flash 2s infinite alternate; */
     margin-top: 2%;
 }
 
-.Fbooks{
+.Fbooks {
     border-bottom: solid 2px grey;
     margin-left: 20%;
     animation: flash 2s infinite alternate;
     font-weight: bold;
+    margin-top: 1rem;
 
 }
 
-.Lbooks{
+.Lbooks {
     border-bottom: solid 2px grey;
     margin-left: 20%;
     animation: flash 2s infinite alternate;
     font-weight: bold;
+    margin-top: 1rem;
 
 }
 
-.book-link{
+.book-link {
     float: right;
     padding: 1rem;
     /* background-color: #32522f; */
@@ -62,22 +77,65 @@
 
 #address {
     position: absolute;
-    top: 50%;
+    top: 70%;
     width: 20%;
     display: flex;
     flex-direction: column;
     background-color: #32522f;
     z-index: 1;
     color: white;
-    
 }
 
-
-.loc-link{
+.loc-link {
     color: white;
     padding: 6px 8px 6px 16px;
 }
 
 .loc-link:hover {
     color: #d4af37;
+}
+
+@media screen and (max-width: 820px) {
+    #address {
+        border-bottom: solid 2px grey;
+        border-left: solid 2px grey;
+        position: static;
+        width: 100%;
+        padding: 16px;
+        background-color: white;
+        color: black;
+    }
+
+    .loc-link {
+        color: black;
+    }
+
+    .banner,
+    .intro,
+    .feature,
+    .Fbooks,
+    .Lbooks,
+    .latest {
+        margin-left: 0;
+    }
+
+    .intro,
+    .fourbooks {
+        border-bottom: solid 2px grey;
+    }
+
+    .banner,
+    .Fbooks,
+    .Lbooks,
+    .latest,
+    #searchform {
+        border-bottom: 0
+    }
+
+}
+
+@media screen and (max-width: 470px) {
+    #side {
+        flex-direction: column;
+    }
 }
