--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -6,9 +6,11 @@
 
 form.signup, form.login {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap:0.5rem;
     width: 20rem;
+    height:25rem;
     margin: 40px auto;
     padding-bottom: 0.5rem;
     background: rgb(255, 255, 255);
