--- a/src/styles/Appointment.css
+++ b/src/styles/Appointment.css
@@ -1,20 +1,46 @@
+.img{
+    position: absolute;
+    top: 99px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    transform: scale(0.5);
+}
+
 .out_book{
+    position: absolute;
+    top: 60%;
+    /* width: 40%; */
+    display: flex;
+    flex-direction: column;
+    /* background-color: #32522f; */
+    z-index: 1;
+    /* color: white; */
+   
+}
+
+.submit{
+    margin-left: 65%;
     position: relative;
-    top: 5vh;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    right: 100px;
+    padding: 0 10%;
+    background-color: gray;
     
 }
-.out_book.img{
-    position: absolute;
-    top: 10%;
-    right: 30%;
-    display: flex;
-    transform: scale(2)
-}
-.form{
-    position: relative;
-    top: 5vh;
-    right: 0;
+
+.title {
+    position: relative;;
+    top: 0;
+    border-bottom: solid 2px grey;
+    /* animation: flash 2s infinite alternate; */
+    margin-left: 50%;
+    font-weight: bold;
+    margin-top: 10rem;
+    /* background-color: grey; */
+    padding: 10;
+
 }
 /* 
 .submit{
@@ -27,7 +53,14 @@
 } */
 
 @media screen and (max-width: 820px) {
-    .out_book.img{
+    /* .out_book,
+    .img{
+        margin-left: 0;
+    } */
+    .submit,
+    .title{
+        flex-direction: column;
+
     }
 }
 
