--- a/src/styles/Appointment.css
+++ b/src/styles/Appointment.css
@@ -1,6 +1,5 @@
 .img{
     position: absolute;
-    top: 99px;
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -9,61 +8,62 @@
 
 .out_book{
     position: absolute;
-    top: 60%;
-    /* width: 40%; */
+    margin-top: 40%;
     display: flex;
     flex-direction: column;
-    /* background-color: #32522f; */
     z-index: 1;
-    /* color: white; */
+    text-align: center;
    
 }
 
 .submit{
+    margin-top: 5%;
     margin-left: 65%;
     position: relative;
     display: flex;
     flex-direction: column;
     right: 100px;
-    padding: 0 10%;
+    padding: 0 2vw;
     background-color: gray;
-    
 }
 
-.title {
+/* .title {
     position: relative;;
     top: 0;
     border-bottom: solid 2px grey;
-    /* animation: flash 2s infinite alternate; */
+    animation: flash 2s infinite alternate;
     margin-left: 50%;
     font-weight: bold;
     margin-top: 10rem;
-    /* background-color: grey; */
+    background-color: grey;
     padding: 10;
-
-}
-/* 
-.submit{
-    position: relative;
-    top: 50vh;
-}
-
-.submit>p{
-    font-weight: bold;
 } */
 
+
 @media screen and (max-width: 820px) {
-    /* .out_book,
     .img{
-        margin-left: 0;
-    } */
-    .submit,
-    .title{
-        flex-direction: column;
+        transform: scale(1);
+        position :relative; 
+        /* z-index : -99; */
+        /* margin-left: 50%; */
+
+        
 
     }
-}
+    .out_book{
+        position :relative; 
+        /* z-index : -99  */
+        /* margin-right: 50; */
+    }
+    .submit{
+        position: relative;
+        border-left: 0px;
+        /* border-bottom: 0; */
+        margin-left: 0;
+        text-align: center;
+    }
 
+}
 
 @media screen and (max-width: 470px) {
 
