--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -3,23 +3,23 @@
     flex-direction: column;
 }
 
-#books>h1, #books>h2 {
-    margin-left: 20%;    
+#books>h1,
+#books>h2 {
+    margin-left: 20%;
 }
 
 #books>h1 {
     border-bottom: solid 2px grey;
 }
 
-@media screen and (max-width: 820px) {    
+@media screen and (max-width: 820px) {
     #books {
         display: flex;
         flex-direction: column;
     }
 
-    #books>h2, #books>h1 {
+    #books>h2,
+    #books>h1 {
         margin: 0px 0px;
     }
 }
-
-
